--- a/QwikiWiki.Website/Views/Home/ReloadChampionData.cshtml
+++ b/QwikiWiki.Website/Views/Home/ReloadChampionData.cshtml
@@ -1,6 +1,6 @@
 ﻿@model QwikiWiki.Common.Models.ReloadChampionDataViewModel
 
-@using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "ReloadDataForm", @onsubmit = "return confirm('Dop you want to reload the data?');" }))
+@using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "ReloadDataForm", @onsubmit = "return confirm('Do you want to reload the data?');" }))
 {
     <div class="innerContainer">
         <div class="divRow">
